# AdventOfCode2022

./: CMakeLists.txt  README.md
day1/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day11/: CMakeLists.txt  main_1.cpp  utils.cpp  utils.h
day12/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day13/: CMakeLists.txt  debug.txt  main_1.cpp  main_2.cpp  test_1.cpp  utils.cpp  utils.h
day14/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day15/: CMakeLists.txt  README.md  main_1.cpp  main_2.cpp  test_1.cpp  utils.cpp  utils.h
day16/: CMakeLists.txt  dot.cpp  main_1.cpp  main_2.cpp  small_test.txt  test.dot  utils.cpp  utils.h
day17/: CMakeLists.txt  main_1.cpp  utils.cpp  utils.h
day18/: CMakeLists.txt  main_1.cpp  main_2.cpp  test.cpp  utils.cpp  utils.h
day2/: CMakeLists.txt  main_1.cpp  main_2.cpp  score.cpp  score.h
day3/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day4/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day5/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day6/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day7/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day8/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
day9/: CMakeLists.txt  main_1.cpp  main_2.cpp  utils.cpp  utils.h
googletest/: CMakeLists.txt
